--- a/services/mongo/docker-compose.yml
+++ b/services/mongo/docker-compose.yml
@@ -3,9 +3,8 @@ version: "3"
 services:
   mongo:
     image: mongo:7
-    # user: $UID:$GID
     volumes:
-      - ./data/db:/data/db
+      - $DATA/mongo:/data/db
     restart: unless-stopped
 
 networks:
