Update compose file for jskos-server-dev

--- a/services/jskos-server-dev/docker-compose.yml
+++ b/services/jskos-server-dev/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   jskos-server:
-    image: ghcr.io/gbv/jskos-server:2
+    image: ghcr.io/gbv/jskos-server:dev
     networks:
       - nginx
       - mongo
