Small update to Cocoda docker-compose.yml

--- a/services/cocoda/docker-compose.yml
+++ b/services/cocoda/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - TAGS=all
       - USE_SUBPATH=true
       - VIRTUAL_HOST=coli-conc.gbv.de
-      - VIRTUAL_PATH=~^/cocoda/.+/
+      - VIRTUAL_PATH=~^/cocoda/.+
 
 networks:
   default:
