Update config for login-server

--- a/configs/login-server.env
+++ b/configs/login-server.env
@@ -1,11 +1,11 @@
 PORT=3004
 VIRTUAL_HOST=coli-conc.gbv.de
 VIRTUAL_PORT=$PORT
-VIRTUAL_PATH=/login-test/
+VIRTUAL_PATH=/login/
 VIRTUAL_DEST=/
 MONGO_HOST=mongo
-MONGO_DB=login-server-test
-BASE_URL=https://$VIRTUAL_HOST/login-test/
+BASE_URL=https://$VIRTUAL_HOST/login
+ALLOWED_ORIGINS=https://gbv.github.io,https://bartoc.org,http://bartoc.org,https://dev.bartoc.org,http://dev.bartoc.org
 JWT_EXPIRES_IN=60
 NODE_ENV=production
 IMPRINT_URL=https://www.gbv.de/impressum
