Update login-server config

--- a/configs/login-server.env
+++ b/configs/login-server.env
@@ -4,7 +4,7 @@ VIRTUAL_PORT=$PORT
 VIRTUAL_PATH=/login/
 VIRTUAL_DEST=/
 MONGO_HOST=mongo
-BASE_URL=https://$VIRTUAL_HOST/login
+BASE_URL=https://$VIRTUAL_HOST/login/
 ALLOWED_ORIGINS=https://gbv.github.io,https://bartoc.org,http://bartoc.org,https://dev.bartoc.org,http://dev.bartoc.org
 JWT_EXPIRES_IN=60
 NODE_ENV=production
