--- a/services/bartoc-dev/docker-compose.yml
+++ b/services/bartoc-dev/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     volumes:
       - $CONFIGS/bartoc-dev:/config
     environment:
-      - BASE_URL=http://dev.bartoc.org/
+      - BASE_URL=https://dev.bartoc.org/
       - VIRTUAL_HOST=dev.bartoc.org
-      - VIRTUAL_PATH=/ 
+      - VIRTUAL_PATH=/
       - VIRTUAL_DEST=/
     restart: unless-stopped
 
