Use main tag for bartoc instead of version

--- a/services/bartoc/docker-compose.yml
+++ b/services/bartoc/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   bartoc:
-    image: ghcr.io/gbv/bartoc.org:1
+    image: ghcr.io/gbv/bartoc.org:main
     networks:
       - nginx
       - mongo
