Add simple backup script for mongo

--- a/services/mongo/docker-compose.yml
+++ b/services/mongo/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: mongo:7
     volumes:
       - $DATA/mongo:/data/db
+      - $HOME/backup:/backup
     restart: unless-stopped
 
 networks:
