Make mongo port accessible on localhost

--- a/services/mongo/docker-compose.yml
+++ b/services/mongo/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     volumes:
       - $DATA/mongo:/data/db
       - $HOME/backup:/backup
+    ports:
+      - 127.0.0.1:27017:27017
     restart: unless-stopped
 
 networks:
