Update configs for jskos-server production instances

--- a/configs/jskos-server-ccmapper.json
+++ b/configs/jskos-server-ccmapper.json
@@ -1,6 +1,7 @@
 {
   "baseUrl": "https://coli-conc.gbv.de/ccmapper/api/",
   "title": "JSKOS Server CCMapper",
+  "env": "production",
   "mongo": {
     "host": "mongo",
     "db": "jskos-server-ccmapper"
