--- a/services/jskos-data-webserver/docker-compose.yml
+++ b/services/jskos-data-webserver/docker-compose.yml
@@ -2,14 +2,17 @@ version: "3"
 
 services:
   jskos-data-webserver:
-    image: busybox
+    image: lscr.io/linuxserver/nginx
     volumes:
-      - $DATA/jskos-data:/var/www/
+      # nginx www data
+      - $DATA/jskos-data:/config/www
+      # Required if using fancyindex module
+      - $CONFIGS/nginx-fancyindex-theme.conf:/config/nginx/site-confs/default.conf
+      - $DATA/nginx-fancyindex-theme/Nginx-Fancyindex-Theme-light:/config/Nginx-Fancyindex-Theme-light
     environment:
       - VIRTUAL_HOST=esx-190.gbv.de
       - VIRTUAL_PATH=/jskos-data/
       - VIRTUAL_DEST=/
-    command: httpd -f -h /var/www/
     restart: unless-stopped
 
 networks:
