--- a/services/nginx-fancyindex-theme/docker-compose.yml
+++ b/services/nginx-fancyindex-theme/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - $CONFIGS/nginx-fancyindex-theme.conf:/config/nginx/site-confs/default.conf
       - $DATA/nginx-fancyindex-theme/Nginx-Fancyindex-Theme-light:/config/Nginx-Fancyindex-Theme-light
     environment:
-      - VIRTUAL_HOST=coli-conc.gbv.de
+      - VIRTUAL_HOST=coli-conc.gbv.de,esx-190.gbv.de
       - VIRTUAL_PATH=/Nginx-Fancyindex-Theme-light/
       - VIRTUAL_DEST=/
     restart: unless-stopped
