Add jskos-proxy-dev, adjust URLs, and add webhook entry

--- a/services/jskos-proxy-dev/docker-compose.yml
+++ b/services/jskos-proxy-dev/docker-compose.yml
@@ -1,9 +1,9 @@
 services:
   jskos-proxy:
-    image: ghcr.io/gbv/jskos-proxy:main
+    image: ghcr.io/gbv/jskos-proxy:dev
     environment:
-      - CONFIG=examples/uri.gbv.de
-      - VIRTUAL_HOST=uri.gbv.de
+      - CONFIG=uri.gbv.de
+      - VIRTUAL_HOST=coli-conc.gbv.de
       - VIRTUAL_PORT=3555
       - VIRTUAL_PATH=/terminology/
     restart: unless-stopped
