--- a/services/jskos-proxy/docker-compose.yml
+++ b/services/jskos-proxy/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   jskos-proxy:
-    image: ghcr.io/gbv/jskos-proxy:main
+    image: ghcr.io/gbv/jskos-proxy:0.2
     environment:
       - CONFIG=examples/uri.gbv.de
       - VIRTUAL_HOST=uri.gbv.de
