--- a/services/jskos-proxy/docker-compose.yml
+++ b/services/jskos-proxy/docker-compose.yml
@@ -1,8 +1,9 @@
 services:
   jskos-proxy:
-    image: ghcr.io/gbv/jskos-proxy:0.2
+    image: ghcr.io/gbv/jskos-proxy:main
     environment:
-      - CONFIG=examples/uri.gbv.de
+      - CONFIG=uri.gbv.de
+      - BASE=/terminology/
       - VIRTUAL_HOST=uri.gbv.de
       - VIRTUAL_PORT=3555
       - VIRTUAL_PATH=/terminology/
