Adjust headers in nginx-proxy configuration

--- a/services/nginx/docker-compose.yml
+++ b/services/nginx/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - /run/user/$UID/docker.sock:/tmp/docker.sock:ro
       - $CONFIGS/nginx-proxy.conf:/etc/nginx/conf.d/nginx-proxy.conf:ro
+      - /$CONFIGS/nginx/vhost.d:/etc/nginx/vhost.d:ro
     restart: unless-stopped
 
 networks:
