coli-rich-dev: Fix by adding BASE

--- a/services/coli-rich-dev/docker-compose.yml
+++ b/services/coli-rich-dev/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - VIRTUAL_PORT=80
       - VIRTUAL_PATH=/coli-rich/dev/
       - VIRTUAL_DEST=/
+      - BASE=/coli-rich/dev/
     restart: unless-stopped
 
 networks:
