Adjust Cocoda NFDI4Objects logo

--- a/services/cocoda/docker-compose.yml
+++ b/services/cocoda/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       - $DATA/cocoda:/www/cocoda
       - $CONFIGS/cocoda:/configs
       - $DATA/cocoda.git:/root/cocoda
+      # nfdi4objects logo
+      - $CONFIGS/cocoda/nfdi4objects-logo.png:/www/cocoda/nfdi4objects/nfdi4objects-logo.png
     restart: unless-stopped
     environment:
       - TAGS=all
