--- a/services/typesense-suggest/docker-compose.yml
+++ b/services/typesense-suggest/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       # Note that this by default only contains an empty config file + the SQLite cache, so it's in $DATA instead of $CONFIG
       - $DATA/typesense-suggest/config:/config
       - $DATA/typesense-suggest/cache:/cache
+      # Mount configuration separately
+      - $CONFIG/typesense-suggest.json:/config/config.json
     environment:
       - VIRTUAL_HOST=coli-conc.gbv.de
       - VIRTUAL_PORT=3021
