--- a/services/coli-rich-dev/docker-compose.yml
+++ b/services/coli-rich-dev/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - VIRTUAL_PATH=/coli-rich/dev/
       - VIRTUAL_DEST=/
       - BASE=/coli-rich/dev/
-      - LOGIN=https://coli-conc.gbv.de/login
+      - VITE_LOGIN_SERVER=https://coli-conc.gbv.de/login
     restart: unless-stopped
 
 networks:
