jskos-proxy: Adjust config preset

--- a/services/jskos-proxy/docker-compose.yml
+++ b/services/jskos-proxy/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   jskos-proxy:
     image: ghcr.io/gbv/jskos-proxy:main
     environment:
-      - CONFIG=uri.gbv.de
+      - CONFIG=uri.gbv.de+coli-conc
       - BASE=/terminology/
       - VIRTUAL_HOST=uri.gbv.de
       - VIRTUAL_PORT=3555
