Adjust coli-rich-dev configuration

--- a/configs/coli-rich-dev.env
+++ b/configs/coli-rich-dev.env
@@ -5,4 +5,4 @@ BASE_URL=https://$VIRTUAL_HOST$VIRTUAL_PATH
 ENRICHMENTS_PATH=/enrichments
 VITE_LOGIN_SERVER=https://coli-conc.gbv.de/login
 VITE_ALLOWED_PROVIDERS=*
-NODE_ENV=development
+VITE_ADDITIONAL_TEXT="Dies ist eine Entwicklungsinstanz und kann zur Demonstration verwendet werden. Vorgemerkte Anreicherungen werden nicht in den K10plus übernommen. "
