Update coli-rich and coli-rich-dev configurations

--- a/configs/coli-rich-dev.env
+++ b/configs/coli-rich-dev.env
@@ -4,5 +4,7 @@ VIRTUAL_PATH=/coli-rich/dev/
 BASE_URL=https://$VIRTUAL_HOST$VIRTUAL_PATH
 ENRICHMENTS_PATH=/enrichments
 VITE_LOGIN_SERVER=https://coli-conc.gbv.de/login
+# This allows free access to backend without login, for demo purposes
+VITE_ALLOWED_USERS=*
 VITE_ALLOWED_PROVIDERS=*
-VITE_ADDITIONAL_TEXT="Dies ist eine Entwicklungsinstanz und kann zur Demonstration verwendet werden. Vorgemerkte Anreicherungen werden nicht in den K10plus übernommen. "
+VITE_ADDITIONAL_TEXT="Dies ist eine Entwicklungsinstanz und kann zur Demonstration verwendet werden. Vorgemerkte Anreicherungen werden nicht in den K10plus übernommen."
