--- a/configs/coli-rich.env
+++ b/configs/coli-rich.env
@@ -4,4 +4,7 @@ VIRTUAL_PATH=/coli-rich/app/
 BASE_URL=https://$VIRTUAL_HOST$VIRTUAL_PATH
 ENRICHMENTS_PATH=/enrichments
 VITE_LOGIN_SERVER=https://coli-conc.gbv.de/login
+# Allow coli-conc team (regardless of providers)
 VITE_ALLOWED_USERS=https://coli-conc.gbv.de/login/users/3a1bb23f-8d60-4b7a-8bec-cc419d7f6ab6,https://coli-conc.gbv.de/login/users/c0c1914a-f9d6-4b92-a624-bf44118b6619,https://coli-conc.gbv.de/login/users/d89dce6e-8995-49f5-9a2c-54d8aef7cd49,https://coli-conc.gbv.de/login/users/bf445064-200f-4734-849c-4c0d10657280
+# Allow all users that have CBS provider connected to their account
+VITE_ALLOWED_PROVIDERS=cbs
