--- a/services/bartoc-search-dev/docker-compose.yml
+++ b/services/bartoc-search-dev/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: bartoc-search-dev
     networks:
       - nginx
-      - mongo
+      - mongo-dev
       - solr
     volumes:
       - $CONFIGS/bartoc-search-dev/config.json:/config/config.json:ro
@@ -21,9 +21,9 @@ networks:
   nginx:
     external: true
     name: nginx
-  mongo:
+  mongo-dev:
     external: true
-    name: mongo
+    name: mongo-dev
   solr:
     external: true
     name: solr
