Refer to mongo-dev in setup script and container name set to mongo-dev

--- a/services/mongo-dev/docker-compose.yml
+++ b/services/mongo-dev/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   mongo-dev:
     image: mongo:7
+    container_name: mongo-dev
     entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
     volumes:
       - $DATA/mongo-dev:/data/db
