add data default folder to Solr service

--- a/services/solr/docker-compose.yml
+++ b/services/solr/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       ports:
         - "8983:8983"
       volumes:
-        - solr_data:/var/solr
+        - $DATA/solr_data:/var/solr
         - ./solr-config/bartoc-configset:/configsets/bartoc-configset
       command:
         - solr-precreate
