--- a/services/bartoc-search-dev/docker-compose.yml
+++ b/services/bartoc-search-dev/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - $CONFIGS/bartoc-search-dev/config.json:/config/config.json:ro
     environment:
-      - __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS=.coli-conc.gbv.de
+      - __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS=coli-conc.gbv.de-66498cbd0fd9d56a52c62df973b552d419bce1a9
       - CONFIG_FILE=/config/config.json
       - NODE_ENV=development
       - VIRTUAL_HOST=coli-conc.gbv.de
