--- a/configs/coli-rich-dev.env
+++ b/configs/coli-rich-dev.env
@@ -2,9 +2,12 @@ VIRTUAL_HOST=coli-conc.gbv.de
 VIRTUAL_PORT=3454
 VIRTUAL_PATH=/coli-rich/dev/
 BASE_URL=https://$VIRTUAL_HOST$VIRTUAL_PATH
+DBKEY=test-k10plus
+EXAMPLES=389598534,1830228498,1646529499
+
 ENRICHMENTS_PATH=/enrichments
 VITE_LOGIN_SERVER=https://coli-conc.gbv.de/login
+
 # This allows free access to backend without login, for demo purposes
 VITE_ALLOWED_USERS=*
 VITE_ALLOWED_PROVIDERS=*
-VITE_ADDITIONAL_TEXT="Dies ist eine Entwicklungsinstanz und kann zur Demonstration verwendet werden. Vorgemerkte Anreicherungen werden nicht in den K10plus übernommen."
