Update configuration of coli-rich-web

--- a/configs/coli-rich.env
+++ b/configs/coli-rich.env
@@ -2,8 +2,8 @@ VIRTUAL_HOST=coli-conc.gbv.de
 VIRTUAL_PORT=3454
 VIRTUAL_PATH=/coli-rich/app/
 BASE_URL=https://$VIRTUAL_HOST$VIRTUAL_PATH
-DBKEY=opac-de-627
-EXAMPLES=389598534,1830228498,1646529499
+VITE_DBKEY=opac-de-627
+VITE_EXAMPLES=389598534,1830228498,1646529499
 ENRICHMENTS_PATH=/enrichments
 VITE_LOGIN_SERVER=https://coli-conc.gbv.de/login
 # Allow coli-conc team (regardless of providers)
