--- a/configs/coli-rich-dev.env
+++ b/configs/coli-rich-dev.env
@@ -2,8 +2,8 @@ VIRTUAL_HOST=coli-conc.gbv.de
 VIRTUAL_PORT=3454
 VIRTUAL_PATH=/coli-rich/dev/
 BASE_URL=https://$VIRTUAL_HOST$VIRTUAL_PATH
-DBKEY=test-k10plus
-EXAMPLES=389598534,1830228498,1646529499
+VITE_DBKEY=test-k10plus
+VITE_EXAMPLES=389598534,1830228498,1646529499
 
 ENRICHMENTS_PATH=/enrichments
 VITE_LOGIN_SERVER=https://coli-conc.gbv.de/login
