--- a/configs/coli-rich-dev.env
+++ b/configs/coli-rich-dev.env
@@ -3,7 +3,7 @@ VIRTUAL_PORT=3454
 VIRTUAL_PATH=/coli-rich/dev/
 BASE_URL=https://$VIRTUAL_HOST$VIRTUAL_PATH
 VITE_DBKEY=test-k10plus
-VITE_EXAMPLES=389598534,1830228498,1646529499
+VITE_EXAMPLES=1848837232,385649304,857545531
 
 ENRICHMENTS_PATH=/enrichments
 VITE_LOGIN_SERVER=https://coli-conc.gbv.de/login
