Configure coli-rich-dev

--- a/configs/coli-rich-dev.env
+++ b/configs/coli-rich-dev.env
@@ -4,6 +4,7 @@ VIRTUAL_PATH=/coli-rich/dev/
 BASE_URL=https://$VIRTUAL_HOST$VIRTUAL_PATH
 VITE_DBKEY=test-k10plus
 VITE_EXAMPLES=1848837232,385649304,857545531
+VITE_SUBJECTS_API=https://coli-conc.gbv.de/subjects-dev
 
 ENRICHMENTS_PATH=/enrichments
 VITE_LOGIN_SERVER=https://coli-conc.gbv.de/login
