Adjust login-server for coli-richt-test

--- a/configs/coli-rich-dev.env
+++ b/configs/coli-rich-dev.env
@@ -7,7 +7,7 @@ VITE_EXAMPLES=1848837232,385649304,857545531
 VITE_SUBJECTS_API=https://coli-conc.gbv.de/subjects-dev
 
 ENRICHMENTS_PATH=/enrichments
-VITE_LOGIN_SERVER=https://coli-conc.gbv.de/login
+VITE_LOGIN_SERVER=https://coli-conc.gbv.de/login-cbs-test
 
 # This allows free access to backend without login, for demo purposes
 VITE_ALLOWED_USERS=*
