Add redis-dev service (#27)

--- a/services/solr-dev/docker-compose.yml
+++ b/services/solr-dev/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         - solr-precreate
         - bartoc
         - /configsets/bartoc-configset
+      restart: unless-stopped
   
 networks:
   default:
