--- a/services/bartoc-search-dev/docker-compose.yml
+++ b/services/bartoc-search-dev/docker-compose.yml
@@ -6,17 +6,19 @@ services:
       - nginx
       - mongo-dev
       - solr-dev
+      - redis-dev
     ports:
-      - "3000:3000"
+      - "3883:3883"     # HTTP
       - "24678:24678"
     volumes:
       - $CONFIGS/bartoc-search-dev/config.json:/config/config.json:ro
     environment:
       - __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS=coli-conc.gbv.de-66498cbd0fd9d56a52c62df973b552d419bce1a9
       - CONFIG_FILE=/config/config.json
+      - VITE_JSKOS_WS_URL=ws://jskos-server-dev:3000
       - NODE_ENV=development
       - VIRTUAL_HOST=coli-conc.gbv.de
-      - VIRTUAL_PORT=3000
+      - VIRTUAL_PORT=3883
       - VIRTUAL_PATH=/bartoc-search-dev/
       - VIRTUAL_DEST=/
     restart: unless-stopped
@@ -31,3 +33,6 @@ networks:
   solr-dev:
     external: true
     name: solr-dev
+  -redis-dev:
+    external: true
+    name: redis-dev
