--- a/services/redis-dev/docker-compose.yml
+++ b/services/redis-dev/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - redis_data:/data
+      - $DATA/redis_data:/data
     restart: unless-stopped
 
 networks:
