Fix typo in docker compose (#27)

--- a/services/bartoc-search-dev/docker-compose.yml
+++ b/services/bartoc-search-dev/docker-compose.yml
@@ -33,6 +33,6 @@ networks:
   solr-dev:
     external: true
     name: solr-dev
-  -redis-dev:
+  redis-dev:
     external: true
     name: redis-dev
