--- a/services/bartoc-dev/docker-compose.yml
+++ b/services/bartoc-dev/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: ghcr.io/gbv/bartoc.org:dev
     networks:
       - nginx
-      - mongo
+      - mongo-dev
     volumes:
       - $CONFIGS/bartoc-dev:/config
     environment:
@@ -23,6 +23,6 @@ networks:
   nginx:
     external: true
     name: nginx
-  mongo:
+  mongo-dev:
     external: true
-    name: mongo
+    name: mongo-dev
