--- a/services/jskos-server/docker-compose.yml
+++ b/services/jskos-server/docker-compose.yml
@@ -12,6 +12,10 @@ services:
       - VIRTUAL_PATH=/api/
       - VIRTUAL_DEST=/
     restart: unless-stopped
+    labels:
+      description: "JSKOS Server implements the JSKOS API web service and storage for JSKOS data"
+      type: application
+
 
 networks:
   nginx:
