Grasp main tag (#42)

--- a/services/bartoc-vocabularies/docker-compose.yml
+++ b/services/bartoc-vocabularies/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   bartoc-vocabularies:
-    image: ghcr.io/gbv/bartoc-vocabularies
+    image: ghcr.io/gbv/bartoc-vocabularies:main
     volumes:
       - $DATA/bartoc-vocabularies:/bartoc-vocabularies
     restart: no
