--- a/services/bartoc-search/docker-compose.yml
+++ b/services/bartoc-search/docker-compose.yml
@@ -1,25 +1,24 @@
 services:
-  bartoc-search-dev:
-    image: ghcr.io/gbv/bartoc-search:dev
-    container_name: bartoc-search-dev
+  bartoc-search:
+    image: ghcr.io/gbv/bartoc-search:main
+    container_name: bartoc-search
     networks:
       - nginx
-      - solr-dev
-      - redis-dev
+      - solr
     ports:
       - "3883:3883"     # HTTP
       - "24678:24678"
     volumes:
-      - $CONFIGS/bartoc-search-dev:/config:ro
+      - $CONFIGS/bartoc-search:/config:ro
     environment:
       - __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS=coli-conc.gbv.de-66498cbd0fd9d56a52c62df973b552d419bce1a9
       - CONFIG_FILE=/config/config.json
       - NODE_ENV=development
       - DATA_DIR=/usr/src/app/data
-      - BARTOC_DUMP=https://bartoc.org/data/dumps/latest.ndjson
-      - VIRTUAL_HOST=dev.bartoc.org
+      - BARTOC_NDJSON_URL=https://bartoc.org/data/dumps/latest.ndjson
+      - VIRTUAL_HOST=coli-conc.gbv.de
       - VIRTUAL_PORT=3883
-      - VIRTUAL_PATH=/vocabularies
+      - VIRTUAL_PATH=/bartoc-search/
       - VIRTUAL_DEST=/
     restart: unless-stopped
 
@@ -27,9 +26,6 @@ networks:
   nginx:
     external: true
     name: nginx
-  solr-dev:
+  solr:
     external: true
-    name: solr-dev
-  redis-dev:
-    external: true
-    name: redis-dev
+    name: solr
