--- a/services/bartoc-dev/docker-compose.yml
+++ b/services/bartoc-dev/docker-compose.yml
@@ -18,7 +18,7 @@ services:
               dest: "/"
             "/api/":
               port: 3000
-              dest: "/api/"
+              dest: "/"
     restart: unless-stopped
 
 networks:
