Redefine solr-dev docker compose (#47)

--- a/services/solr-dev/docker-compose.yml
+++ b/services/solr-dev/docker-compose.yml
@@ -1,11 +1,10 @@
 services:
   solr-dev:
     image: solr:8
-    container_name: solr-dev
     ports:
-      - "8983:8983"
+      - "127.0.0.1:8984:8983"
     volumes:
-      - $DATA/solr_data:/var/solr
+      - $DATA/solr_data_dev:/var/solr
       - $CONFIGS/solr-dev/terminologies-configset:/configsets/terminologies-configset
     command:
       - solr-precreate
