Define solr docker compose (#47)

--- a/services/solr-dev/docker-compose.yml
+++ b/services/solr-dev/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "127.0.0.1:8984:8983"
     volumes:
       - $DATA/solr_data_dev:/var/solr
-      - $CONFIGS/solr-dev/terminologies-configset:/configsets/terminologies-configset
+      - $CONFIGS/solr-dev/terminologies-configset:/configsets/terminologies-configset:ro
     command:
       - solr-precreate
       - terminologies
