--- a/services/redis-dev/docker-compose.yml
+++ b/services/redis-dev/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
-   redis:
+   redis-dev:
     image: redis:7
-    container_name: redis-dev
     ports:
-      - "6379:6379"
+    - "127.0.0.1:6380:6379"
+    command: ["redis-server", "--appendonly", "yes", "--save", "60", "1000"]
     volumes:
-      - $DATA/redis_data:/data
+      - $DATA/redis_data_dev:/data
     restart: unless-stopped
 
 networks:
